parser/hclParser.js
// Generated from hcl.g4 by ANTLR 4.9.3
// jshint ignore: start
import antlr4 from 'antlr4';
import hclListener from '../listener/hclListener.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export default class hclParser extends antlr4.Parser {

    static grammarFileName = "hcl.g4";
    static literalNames = [ null, "'module'", "'provider'", "'terraform'", 
                            "'{'", "'}'", "'cloud'", "'backend'", "'required_version'", 
                            "'='", "'required_providers'", "'resource'", 
                            "'variable'", "'output'", "'value'", "'description'", 
                            "'depends_on'", "'sensitive'", "'type'", "'nullable'", 
                            "'list'", "'list('", "')'", "'map('", "'object'", 
                            "'('", "'default'", "'validation'", "'condition'", 
                            "'error_message'", "','", "'.'", "'['", "']'", 
                            "'<<EOF'", "'-'", "'EOF'", "'*'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, "BOOLEANOP", 
                             "BOOLEAN", "TYPE", "IDENTIFIER", "STRING", 
                             "NUMBER", "COMMENT", "LINE_COMMENT", "HAS_COMMENT", 
                             "WS" ];
    static ruleNames = [ "file", "directive", "moduleDirective", "providerDirective", 
                         "terraformDirective", "terraformBlock", "terraformCloud", 
                         "terraformBackEnd", "terraformVersion", "terraformProviders", 
                         "resourceDirective", "variableDirective", "variableBlock", 
                         "outputDirective", "name", "resourceType", "outputBlock", 
                         "outputValue", "outputDescription", "outputDependsOn", 
                         "outputSensitive", "variableSensitive", "variableType", 
                         "variableNullabl", "type", "object", "field", "complexField", 
                         "variableDescription", "variableDefault", "variableValidation", 
                         "validation", "condition", "expression", "functionCall", 
                         "complexExpression", "array", "index" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = hclParser.ruleNames;
        this.literalNames = hclParser.literalNames;
        this.symbolicNames = hclParser.symbolicNames;
    }

    get atn() {
        return atn;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 35:
    	    		return this.complexExpression_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    complexExpression_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 5);
    		case 1:
    			return this.precpred(this._ctx, 4);
    		case 2:
    			return this.precpred(this._ctx, 3);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	file() {
	    let localctx = new FileContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, hclParser.RULE_file);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 77; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 76;
	            this.directive();
	            this.state = 79; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << hclParser.T__0) | (1 << hclParser.T__1) | (1 << hclParser.T__2) | (1 << hclParser.T__10) | (1 << hclParser.T__11) | (1 << hclParser.T__12))) !== 0));
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	directive() {
	    let localctx = new DirectiveContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, hclParser.RULE_directive);
	    try {
	        this.state = 87;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case hclParser.T__1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 81;
	            this.providerDirective();
	            break;
	        case hclParser.T__2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 82;
	            this.terraformDirective();
	            break;
	        case hclParser.T__10:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 83;
	            this.resourceDirective();
	            break;
	        case hclParser.T__11:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 84;
	            this.variableDirective();
	            break;
	        case hclParser.T__12:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 85;
	            this.outputDirective();
	            break;
	        case hclParser.T__0:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 86;
	            this.moduleDirective();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	moduleDirective() {
	    let localctx = new ModuleDirectiveContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, hclParser.RULE_moduleDirective);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 89;
	        this.match(hclParser.T__0);
	        this.state = 90;
	        this.name();
	        this.state = 91;
	        this.object();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	providerDirective() {
	    let localctx = new ProviderDirectiveContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, hclParser.RULE_providerDirective);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 93;
	        this.match(hclParser.T__1);
	        this.state = 94;
	        this.name();
	        this.state = 95;
	        this.object();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	terraformDirective() {
	    let localctx = new TerraformDirectiveContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, hclParser.RULE_terraformDirective);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 97;
	        this.match(hclParser.T__2);
	        this.state = 98;
	        this.terraformBlock();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	terraformBlock() {
	    let localctx = new TerraformBlockContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, hclParser.RULE_terraformBlock);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 100;
	        this.match(hclParser.T__3);
	        this.state = 106; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 106;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case hclParser.T__5:
	                this.state = 101;
	                this.terraformCloud();
	                break;
	            case hclParser.T__6:
	                this.state = 102;
	                this.terraformBackEnd();
	                break;
	            case hclParser.T__7:
	                this.state = 103;
	                this.terraformVersion();
	                break;
	            case hclParser.T__9:
	                this.state = 104;
	                this.terraformProviders();
	                break;
	            case hclParser.T__3:
	                this.state = 105;
	                this.object();
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            this.state = 108; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << hclParser.T__3) | (1 << hclParser.T__5) | (1 << hclParser.T__6) | (1 << hclParser.T__7) | (1 << hclParser.T__9))) !== 0));
	        this.state = 110;
	        this.match(hclParser.T__4);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	terraformCloud() {
	    let localctx = new TerraformCloudContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, hclParser.RULE_terraformCloud);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 112;
	        this.match(hclParser.T__5);
	        this.state = 113;
	        this.object();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	terraformBackEnd() {
	    let localctx = new TerraformBackEndContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, hclParser.RULE_terraformBackEnd);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 115;
	        this.match(hclParser.T__6);
	        this.state = 116;
	        this.name();
	        this.state = 117;
	        this.object();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	terraformVersion() {
	    let localctx = new TerraformVersionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, hclParser.RULE_terraformVersion);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 119;
	        this.match(hclParser.T__7);
	        this.state = 120;
	        this.match(hclParser.T__8);
	        this.state = 121;
	        this.match(hclParser.STRING);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	terraformProviders() {
	    let localctx = new TerraformProvidersContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, hclParser.RULE_terraformProviders);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 123;
	        this.match(hclParser.T__9);
	        this.state = 124;
	        this.object();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	resourceDirective() {
	    let localctx = new ResourceDirectiveContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, hclParser.RULE_resourceDirective);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 126;
	        this.match(hclParser.T__10);
	        this.state = 127;
	        this.resourceType();
	        this.state = 128;
	        this.name();
	        this.state = 129;
	        this.object();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	variableDirective() {
	    let localctx = new VariableDirectiveContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, hclParser.RULE_variableDirective);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 131;
	        this.match(hclParser.T__11);
	        this.state = 132;
	        this.name();
	        this.state = 133;
	        this.variableBlock();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	variableBlock() {
	    let localctx = new VariableBlockContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, hclParser.RULE_variableBlock);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 135;
	        this.match(hclParser.T__3);
	        this.state = 143; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 143;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case hclParser.T__17:
	                this.state = 136;
	                this.variableType();
	                break;
	            case hclParser.T__14:
	                this.state = 137;
	                this.variableDescription();
	                break;
	            case hclParser.T__25:
	                this.state = 138;
	                this.variableDefault();
	                break;
	            case hclParser.T__26:
	                this.state = 139;
	                this.variableValidation();
	                break;
	            case hclParser.T__16:
	                this.state = 140;
	                this.variableSensitive();
	                break;
	            case hclParser.T__18:
	                this.state = 141;
	                this.variableNullabl();
	                break;
	            case hclParser.T__3:
	                this.state = 142;
	                this.object();
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            this.state = 145; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << hclParser.T__3) | (1 << hclParser.T__14) | (1 << hclParser.T__16) | (1 << hclParser.T__17) | (1 << hclParser.T__18) | (1 << hclParser.T__25) | (1 << hclParser.T__26))) !== 0));
	        this.state = 147;
	        this.match(hclParser.T__4);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	outputDirective() {
	    let localctx = new OutputDirectiveContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, hclParser.RULE_outputDirective);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 149;
	        this.match(hclParser.T__12);
	        this.state = 150;
	        this.name();
	        this.state = 151;
	        this.outputBlock();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	name() {
	    let localctx = new NameContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, hclParser.RULE_name);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 153;
	        this.match(hclParser.STRING);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	resourceType() {
	    let localctx = new ResourceTypeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, hclParser.RULE_resourceType);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 155;
	        this.match(hclParser.STRING);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	outputBlock() {
	    let localctx = new OutputBlockContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, hclParser.RULE_outputBlock);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 157;
	        this.match(hclParser.T__3);
	        this.state = 163; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 163;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case hclParser.T__13:
	                this.state = 158;
	                this.outputValue();
	                break;
	            case hclParser.T__14:
	                this.state = 159;
	                this.outputDescription();
	                break;
	            case hclParser.T__16:
	                this.state = 160;
	                this.outputSensitive();
	                break;
	            case hclParser.T__15:
	                this.state = 161;
	                this.outputDependsOn();
	                break;
	            case hclParser.T__3:
	                this.state = 162;
	                this.object();
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            this.state = 165; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << hclParser.T__3) | (1 << hclParser.T__13) | (1 << hclParser.T__14) | (1 << hclParser.T__15) | (1 << hclParser.T__16))) !== 0));
	        this.state = 167;
	        this.match(hclParser.T__4);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	outputValue() {
	    let localctx = new OutputValueContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, hclParser.RULE_outputValue);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 169;
	        this.match(hclParser.T__13);
	        this.state = 170;
	        this.match(hclParser.T__8);
	        this.state = 171;
	        this.expression();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	outputDescription() {
	    let localctx = new OutputDescriptionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 36, hclParser.RULE_outputDescription);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 173;
	        this.match(hclParser.T__14);
	        this.state = 174;
	        this.match(hclParser.T__8);
	        this.state = 175;
	        this.match(hclParser.STRING);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	outputDependsOn() {
	    let localctx = new OutputDependsOnContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 38, hclParser.RULE_outputDependsOn);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 177;
	        this.match(hclParser.T__15);
	        this.state = 178;
	        this.match(hclParser.T__8);
	        this.state = 179;
	        this.array();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	outputSensitive() {
	    let localctx = new OutputSensitiveContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 40, hclParser.RULE_outputSensitive);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 181;
	        this.match(hclParser.T__16);
	        this.state = 182;
	        this.match(hclParser.T__8);
	        this.state = 183;
	        this.match(hclParser.BOOLEAN);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	variableSensitive() {
	    let localctx = new VariableSensitiveContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 42, hclParser.RULE_variableSensitive);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 185;
	        this.match(hclParser.T__16);
	        this.state = 186;
	        this.match(hclParser.T__8);
	        this.state = 187;
	        this.match(hclParser.BOOLEAN);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	variableType() {
	    let localctx = new VariableTypeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 44, hclParser.RULE_variableType);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 189;
	        this.match(hclParser.T__17);
	        this.state = 190;
	        this.match(hclParser.T__8);
	        this.state = 191;
	        this.type();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	variableNullabl() {
	    let localctx = new VariableNullablContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 46, hclParser.RULE_variableNullabl);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 193;
	        this.match(hclParser.T__18);
	        this.state = 194;
	        this.match(hclParser.T__8);
	        this.state = 195;
	        this.match(hclParser.BOOLEAN);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	type() {
	    let localctx = new TypeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 48, hclParser.RULE_type);
	    try {
	        this.state = 212;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case hclParser.TYPE:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 197;
	            this.match(hclParser.TYPE);
	            break;
	        case hclParser.T__19:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 198;
	            this.match(hclParser.T__19);
	            break;
	        case hclParser.T__20:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 199;
	            this.match(hclParser.T__20);
	            this.state = 200;
	            this.type();
	            this.state = 201;
	            this.match(hclParser.T__21);
	            break;
	        case hclParser.T__22:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 203;
	            this.match(hclParser.T__22);
	            this.state = 204;
	            this.type();
	            this.state = 205;
	            this.match(hclParser.T__21);
	            break;
	        case hclParser.T__23:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 207;
	            this.match(hclParser.T__23);
	            this.state = 208;
	            this.match(hclParser.T__24);
	            this.state = 209;
	            this.object();
	            this.state = 210;
	            this.match(hclParser.T__21);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	object() {
	    let localctx = new ObjectContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 50, hclParser.RULE_object);
	    var _la = 0; // Token type
	    try {
	        this.state = 225;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,11,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 214;
	            this.match(hclParser.T__3);
	            this.state = 215;
	            this.match(hclParser.T__4);
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 216;
	            this.match(hclParser.T__3);
	            this.state = 219; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            do {
	                this.state = 219;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,9,this._ctx);
	                switch(la_) {
	                case 1:
	                    this.state = 217;
	                    this.complexField();
	                    break;

	                case 2:
	                    this.state = 218;
	                    this.field();
	                    break;

	                }
	                this.state = 221; 
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            } while(((((_la - 15)) & ~0x1f) == 0 && ((1 << (_la - 15)) & ((1 << (hclParser.T__14 - 15)) | (1 << (hclParser.T__17 - 15)) | (1 << (hclParser.IDENTIFIER - 15)))) !== 0));
	            this.state = 223;
	            this.match(hclParser.T__4);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	field() {
	    let localctx = new FieldContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 52, hclParser.RULE_field);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 227;
	        _la = this._input.LA(1);
	        if(!(((((_la - 15)) & ~0x1f) == 0 && ((1 << (_la - 15)) & ((1 << (hclParser.T__14 - 15)) | (1 << (hclParser.T__17 - 15)) | (1 << (hclParser.IDENTIFIER - 15)))) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	        this.state = 228;
	        this.match(hclParser.T__8);
	        this.state = 229;
	        this.expression();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


